modulo_3_AN/3.3/escabilidadTolerancia/istio/webapp-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - webapp-gateway
  http:
  - match:
    - uri:
        prefix: /(.*)
    route:
    - destination:
        host: webapp
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
